--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "grid-rows-masonry",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "dist/index.js",
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
     "build": "tsc"
   },
