--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Start Storybook
+        run: npm run storybook
+
       - name: Run tests
         run: npm run test:visual
 
