--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm ci
 
       - name: Run visual tests
-        run: npm run build-storybook && npm run test:visual -- --reactUri file:./storybook-static
+        run: npm run build-storybook && npm run test:visual -- --reactUri file:./storybook-static --chromeRetries 3
 
       - name: Lint code
         run: npm run lint
