--- a/package.json
+++ b/package.json
@@ -38,12 +38,11 @@
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.1",
     "@semantic-release/npm": "^12.0.1",
-    "@storybook/addon-essentials": "^8.5.8",
-    "@storybook/addon-interactions": "^8.5.8",
-    "@storybook/blocks": "^8.5.8",
-    "@storybook/html": "^8.5.8",
-    "@storybook/html-vite": "^8.5.8",
-    "@storybook/test": "^8.5.8",
+    "@storybook/addon-essentials": "^8.6.3",
+    "@storybook/addon-interactions": "^8.6.3",
+    "@storybook/blocks": "^8.6.3",
+    "@storybook/react": "^8.6.3",
+    "@storybook/react-vite": "^8.6.3",
     "@types/jest": "^29.5.14",
     "eslint": "^9.20.1",
     "globals": "^16.0.0",
@@ -51,7 +50,7 @@
     "nodemon": "^3.1.9",
     "prettier": "^3.5.1",
     "semantic-release": "^24.2.3",
-    "storybook": "^8.5.8",
+    "storybook": "^8.6.3",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.1"
   },
