--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,6 +2,6 @@
     "extends": "./tsconfig.json",
     "exclude": [
         "src/**/*.test.ts",
-        "src/stories",
+        "stories",
     ]
 }
