ignore anti-aliased pixels in test

--- a/package.json
+++ b/package.json
@@ -76,6 +76,9 @@
         "target": "chrome.docker",
         "preset": "iPhone 7"
       }
+    },
+    "pixelmatch": {
+      "includeAA": true
     }
   },
   "overrides": {
