--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -29,4 +29,4 @@ jobs:
         run: npm run lint
 
       - name: Run visual tests
-        run: npm run build-storybook && npm run test:visual -- --requireReference --reactUri file:./storybook-static --chromeTolerance 1
+        run: npm run build-storybook && npm run test:visual -- --requireReference --reactUri file:./storybook-static
