--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@storybook/react": "^8.6.3",
     "@storybook/react-vite": "^8.6.3",
     "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.12",
